<resources>
    <string name="app_name">Smart Safe</string>
    <string name="id">ID</string>
    <string name="password">PASSWORD</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="phonenumber">연락처</string>
    <string name="email">이메일</string>
    <string name="undo">취소</string>
    <string name="commit">완료</string>
    <string name="contentDescription">contentDescription</string>
    <string name="title_activity_home">Smart Safe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Chosun University Capstone Design</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">로그아웃</string>
    <string name="cash_balance">99,999,999</string>

    <string name="menu_home">Home</string>
    <string name="menu_safe">Safe</string>
    <string name="menu_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_safe">Safe</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
